# deploy-pipeline

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
deploy_pipeline/: __init__.py  main.py
deploy_pipeline/labels/: grouping.py  joining.py  matching.py  utils.py
deploy_pipeline/pipeline/: config.py  pipeline.py  templates.py  utils.py
deploy_pipeline/vars/: parsers.py
tests/: conftest.py
tests/etc/: variable_test.json
tests/labels_test/: test_grouping.py  test_joining.py  test_matching.py  test_utils.py
tests/pipeline_test/: test_config.py  test_pipeline.py
tests/vars/: test_parsers.py
