[tool.poetry]
name = "deploy-pipeline"
version = "0.1.0"
description = ""
authors = ["Bryce Lowe <brycel@zillowgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
deploy-pipeline = "deploy_pipeline.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
